syntax = "proto3";

package kaboomproto;
option go_package = "github.com/fsufitch/kaboom/proto/go;kaboomproto";

import "piece.proto";
import "move.proto";

message GameState {
    repeated BoardState boards = 1;
    repeated Player players = 2;
}

message BoardState {
    string white_player_uuid = 1;
    string black_player_uuid = 2;
    ChessBoard chess_board = 3;

    repeated KaboomMove move_history = 4;
    // Current turn, turn count, etc can be implied from the move history
}

message Player {
    string uuid = 1;
    string name = 2;

    repeated string board_uuid = 3;   
}

message ChessBoard {
    string uuid = 1;
    string name = 2;
    repeated ChessPiece pieces = 3;
}

